--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ input[name="r"]{
 
 .product-section{
     width: 100%;
-    background: rgb(228, 225, 225);
+    background: #e4e1e1;
     
 }
 .product-container{
@@ -298,7 +298,7 @@ input[name="r"]{
 }
 .like-icon i{
     font-size: 15px;
-    color: rgb(226, 193, 2);
+    color: #e2c102;
     
 }
 .btn-box a{
@@ -313,5 +313,188 @@ input[name="r"]{
 }
 
 .btn-box a:hover {
-    background: rgb(94, 22, 161);
+    background: #5e16a1;
+}
+
+
+                    /* contact-section  */
+.contact-section {
+    width: 100%;
+}
+.contact-container{
+    width: 70%;
+    margin: auto;
+}
+.contact-header {
+    text-align: center;
+    margin-bottom: 50px;
+}
+.contact-header h2 {
+    font-size: 40px;
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.contact-Google-form{
+    display: flex;
+    justify-content: space-between;
+    background: #8200fc18;
+}
+.Contact-form-tag {
+    padding: 40px;
+    width: 50%;
+}
+.name-email-flex {
+    display: flex;
+    justify-content: space-between;
+}
+.contact-name h3 {
+    font-size: 18px;
+    padding-bottom: 10px;
+}
+input {
+    border: none;
+    outline: none;
+    width: 250px;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+.contact-email h3 {
+    font-size: 18px;
+    padding-bottom: 10px;
+}
+.contact-other h3 {
+    font-size: 18px;
+    padding: 10px 0;
+}
+.contact-other input{
+    width: 100%;
+}
+textarea {
+    width: 100%;
+    height: 120px;
+    padding: 10px;
+    resize: none;
+    border: none;
+    margin-bottom: 40px;
+}
+.contact-other a {
+    text-decoration: none;
+    padding: 10px 40px;
+    background: rgb(132, 0, 255);
+    color: white;
+    border-radius: 10px;
+    font-size: 18px;
+    font-weight: bold;
+}
+.Contact-Google-map {
+    width: 50%;
+}
+.Contact-Google-map iframe {
+    width: 100%;
+    height: 100%;
+}
+.contact-Google-Logo {
+    display: flex;
+    justify-content: space-between;
+    margin: 50px 0;
+    text-align: center;
+}
+.contact-Google-Logo i {
+    font-size: 20px;
+    padding: 20px;
+    background: rgb(132, 0, 255);
+    border-radius: 50%;
+    color: white;
+    margin-bottom: 15px;
+}
+.form-address span {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+                /* INFO-SECTION */
+footer {
+    background: #26113fd7;
+    padding: 100px;
+    margin: 50px 0 0;
+}
+.info-section{
+    width: 80%;
+    margin: auto;
+    
+}
+.info-container h1 {
+    text-align: center;
+    font-size: 40px;
+    color: white;
+    padding-bottom: 10px;
+}
+hr {
+    width: 85%;
+    margin: 20px 0;
+
+}
+.informations {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    color: white;
+   
+}
+.about-box {
+    width: 100%;
+}
+.about-box h2 {
+    font-size: 25px;
+    padding-bottom: 20px;
+}
+.about-box p{
+   padding-right: 80px;
+   font-size: 17px;
+}
+.icon p {
+    font-size: 20px;
+    font-weight: 100;
+    margin-bottom: 15px;
+    
+}
+.icon i {
+    font-size: 20px;
+    color: rgb(255, 255, 255);
+    padding-bottom: 22px;
+}
+.input {
+    padding: 15px ;
+    font-size: 20px;
+    border: none;
+}
+button{
+    display: block;
+    font-size: 18px;
+    font-weight: 800;
+    padding: 10px 20px;
+    margin: 10px 0 20px;
+    background: #8400ff;
+    color: white;
+    border: none;
+    cursor: pointer;
+    transition: 0.5s;
+
+}
+button:hover{
+    background: #5e16a1;
+}
+.social-icon i {
+    font-size: 30px;
+    padding-right: 40px;
+    color: white;
+    text-decoration: none;
+}
+
+.Reserved {
+    margin-top: 50px;
+    text-align: center;
+    font-size: 18px;
+     
+    font-weight: 100;
+    color: #ffffff8a;
 }
